--- a/angularjsproject/package.json
+++ b/angularjsproject/package.json
@@ -1,16 +1,12 @@
 {
-  "author": "Josh David Miller",
-  "name": "ngbp",
-  "version": "0.3.2",
-  "homepage": "https://github.com/ngbp/ngbp",
+  "author": "Henadz Navasiolau",
+  "name": "todo-list",
+  "version": "0.0.1",
   "licenses": {
-    "type": "MIT",
-    "url": "https://raw.github.com/ngbp/ngbp/master/LICENSE"
+    "type": "MIT"
   },
-  "bugs": "https://github.com/ngbp/ngbp/issues",
   "repository": {
-    "type": "git",
-    "url": "git@github.com:ngbp/ngbp.git"
+    "type": "git"
   },
   "dependencies": {},
   "devDependencies": {
