--- a/angularjsproject/bower.json
+++ b/angularjsproject/bower.json
@@ -2,15 +2,15 @@
   "name": "todo-list",
   "version": "0.0.1",
   "devDependencies": {
-    "angular": "~1.2",
+    "angular": "~1.3",
     "angular-mocks": "~1.2",
     "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
     "angular-ui-router": "~0.2",
-    "angular-resource": "https://github.com/angular/bower-angular-resource.git"
+    "angular-resource": "~1.3"
   },
   "dependencies": {},
   "resolutions": {
-    "angular": ">= 1.0.8"
+    "angular": "1.3.0-build.3006+sha.41cb588"
   }
 }
